[gd_scene load_steps=2 format=3 uid="uid://bue0mn1ssj8cg"]

[ext_resource type="Script" path="res://scenes/game_previews/game_preview.gd" id="1_yaur0"]

[node name="GamePreview" type="Button"]
offset_right = 80.0
offset_bottom = 80.0
mouse_filter = 1
expand_icon = true
script = ExtResource("1_yaur0")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
